# chatgpt-clone-microservice

./: .gitignore
auth/: package-lock.json  package.json
auth/src/: app.js  index.js
auth/src/config/: db.js
auth/src/controllers/: user.controller.js
auth/src/middlewares/: authUser.middleware.js  google.middleware.js
auth/src/models/: user.model.js
auth/src/routes/: auth.route.js
auth/src/utils/: accessToken.js
chat/: agent.py  main.py  pyproject.toml
chat/test/: memory.ipynb
gateway/: package-lock.json  package.json
gateway/src/: app.js  index.js
gateway/src/middlewares/: auth.middleware.js
